--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="body-p5">
-  <div class="container cnt-p5 mb-3 row mt-3">
+  <div class="container cnt-p5 mb-3 py-3 row">
     <div class="col-12">
       <div class="alert alert-danger text-center rounded-0">
         Situs ini tidak dioptimalkan untuk laptop atau desktop.
@@ -42,8 +42,7 @@
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 32%; left: 52%;" data-bs-toggle="modal" data-bs-target="#location4Modal">Glagah</a>
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 60%; left: 56%;" data-bs-toggle="modal" data-bs-target="#location5Modal">Muncar</a>
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 47%; left: 29%;" data-bs-toggle="modal" data-bs-target="#location6Modal">Glenmore</a>
-    <button class="map-pin btn btn-sm btn-danger" href="#" style="top: 50%; left: 40%;" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Genteng</button>
-
+    <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 50%; left: 40%;" data-bs-toggle="modal" data-bs-target="#location7Modal">Genteng</a>
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 58%; left: 48%;" data-bs-toggle="modal" data-bs-target="#location8Modal">Srono</a>
       </div>
     </div>
@@ -63,8 +62,8 @@
   </div>
 <!-- Modals -->
 <div class="modal fade" id="location1Modal" tabindex="-1" aria-labelledby="location1ModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title" id="location1ModalLabel">Giri</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -81,14 +80,21 @@
 </div>
 
 <div class="modal fade" id="location2Modal" tabindex="-1" aria-labelledby="location2ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Tegaldlimo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
+        <div class="row gy-3">
+          <div class="col-12 col-lg-6">
+            <img src="img/Tegaldlimo1.png" class="w-100" alt="Poster Tegaldlimo 1">
+          </div>
+          <div class="col-12 col-lg-6">
+            <img src="img/Tegaldlimo2.png" class="w-100" alt="Poster Tegaldlimo 2">
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -97,14 +103,24 @@
   </div>
 </div>
 <div class="modal fade" id="location3Modal" tabindex="-1" aria-labelledby="location3ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Rogojampi</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
+        <div class="row gy-3">
+          <div class="col-12 col-lg-4">
+            <img src="img/Rogojampi1a.png" class="w-100" alt="Poster Rogojampi 1">
+          </div>
+          <div class="col-12 col-lg-4">
+            <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
+          </div>
+          <div class="col-12 col-lg-4">
+            <img src="img/Rogojampi1b.png" class="w-100" alt="Poster Rogojampi 3">
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -113,14 +129,18 @@
   </div>
 </div>
 <div class="modal fade" id="location4Modal" tabindex="-1" aria-labelledby="location4ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Glagah</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
+        <div class="row gy-3">
+          <div class="col-12">
+            <img src="img/Glagah1.jpg" class="w-100" alt="Poster Glagah 1">
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -129,14 +149,18 @@
   </div>
 </div>
 <div class="modal fade" id="location5Modal" tabindex="-1" aria-labelledby="location5ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Muncar</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
+        <div class="row gy-3">
+          <div class="col-12">
+            <img src="img/Muncar1.jpg" class="w-100" alt="Poster Muncar 1">
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -145,14 +169,21 @@
   </div>
 </div>
 <div class="modal fade" id="location6Modal" tabindex="-1" aria-labelledby="location6ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Glenmore</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
+        <div class="row gy-3">
+          <div class="col-12 col-lg-6">
+            <img src="img/Glenmore1.png" class="w-100" alt="Poster Glenmore 1">
+          </div>
+          <div class="col-12 col-lg-6">
+            <img src="img/Glenmore2.png" class="w-100" alt="Poster Glenmore 2">
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -161,7 +192,7 @@
   </div>
 </div>
 <div class="modal fade" id="location7Modal" tabindex="-1" aria-labelledby="location7ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Genteng</h5>
@@ -177,7 +208,7 @@
   </div>
 </div>
 <div class="modal fade" id="location8Modal" tabindex="-1" aria-labelledby="location8ModalLabel" aria-hidden="true">
-  <div class="modal-dialog text-dark">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Srono</h5>
