--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-4">
-            <img src="img/Rogojampi1a.png" class="w-100" alt="Poster Rogojampi 1">
+            <img src="img/Rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
           </div>
           <div class="col-12 col-lg-4">
             <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
@@ -138,7 +138,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12">
-            <img src="img/Glagah1.jpg" class="w-100" alt="Poster Glagah 1">
+            <img src="img/glagah1.jpg" class="w-100" alt="Poster Glagah 1">
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12">
-            <img src="img/Muncar1.jpg" class="w-100" alt="Poster Muncar 1">
+            <img src="img/muncar1.jpg" class="w-100" alt="Poster Muncar 1">
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-6">
-            <img src="img/Glenmore1.png" class="w-100" alt="Poster Glenmore 1">
+            <img src="img/glenmore1.png" class="w-100" alt="Poster Glenmore 1">
           </div>
           <div class="col-12 col-lg-6">
             <img src="img/Glenmore2.png" class="w-100" alt="Poster Glenmore 2">
