--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-4">
-            <img src="img/Rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
+            <img src="img/rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
           </div>
           <div class="col-12 col-lg-4">
             <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
