--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
   <li class="list-group-item list-group-item-secondary">Pinky Ellysa Putri (26)</li>
   <li class="list-group-item list-group-item-secondary">Putri Aprilian Disa (27)</li>
   <li class="list-group-item list-group-item-secondary">Rahajeng Oliviane Devi Mariska (28)</li>
+  <li class="list-group-item list-group-item-primary"><b>Credits:</b></li>
+  <li class="list-group-item list-group-item-secondary"><a href="https://unsplash.com/photos/a-large-body-of-water-surrounded-by-mountains-xY-eefo_zpo" class="link-dark">Gambar Latar Belakang</a></li>
+  <li class="list-group-item list-group-item-secondary"><a href="https://id.m.wikipedia.org/wiki/Berkas:Indonesia_Banyuwangi_Regency_location_map.svg" class="link-dark">Gambar Latar Belakang Peta</a></li>
+  <li class="list-group-item list-group-item-secondary"><a href="https://getbootstrap.com/" class="link-dark"><i>Framework</i> situs</a></li>
 </ul>
     </div>
   </div>
@@ -112,10 +116,10 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-4">
-            <img src="img/rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
+            <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
           </div>
           <div class="col-12 col-lg-4">
-            <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
+            <img src="img/rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
           </div>
           <div class="col-12 col-lg-4">
             <img src="img/Rogojampi1b.png" class="w-100" alt="Poster Rogojampi 3">
