--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-6">
-            <img src="img/Tegaldlimo1.png" class="w-100" alt="Poster Tegaldlimo 1">
+            <img loading="lazy" src="img/Tegaldlimo1.png" class="w-100" alt="Poster Tegaldlimo 1">
           </div>
           <div class="col-12 col-lg-6">
-            <img src="img/Tegaldlimo2.png" class="w-100" alt="Poster Tegaldlimo 2">
+            <img loading="lazy" src="img/Tegaldlimo2.png" class="w-100" alt="Poster Tegaldlimo 2">
           </div>
         </div>
       </div>
@@ -116,13 +116,13 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-4">
-            <img src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
+            <img loading="lazy" src="img/Rogojampi2a.png" class="w-100" alt="Poster Rogojampi 2">
           </div>
           <div class="col-12 col-lg-4">
-            <img src="img/rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
+            <img loading="lazy" src="img/rogojampi1a.png" class="w-100" alt="Poster rogojampi 1">
           </div>
           <div class="col-12 col-lg-4">
-            <img src="img/Rogojampi1b.png" class="w-100" alt="Poster Rogojampi 3">
+            <img loading="lazy" src="img/Rogojampi1b.png" class="w-100" alt="Poster Rogojampi 3">
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12">
-            <img src="img/glagah1.jpg" class="w-100" alt="Poster Glagah 1">
+            <img loading="lazy" src="img/glagah1.jpg" class="w-100" alt="Poster Glagah 1">
           </div>
         </div>
       </div>
@@ -162,7 +162,7 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12">
-            <img src="img/muncar1.jpg" class="w-100" alt="Poster Muncar 1">
+            <img loading="lazy" src="img/muncar1.jpg" class="w-100" alt="Poster Muncar 1">
           </div>
         </div>
       </div>
@@ -182,10 +182,10 @@
       <div class="modal-body text-dark">
         <div class="row gy-3">
           <div class="col-12 col-lg-6">
-            <img src="img/glenmore1.png" class="w-100" alt="Poster Glenmore 1">
+            <img loading="lazy" src="img/glenmore1.png" class="w-100" alt="Poster Glenmore 1">
           </div>
           <div class="col-12 col-lg-6">
-            <img src="img/Glenmore2.png" class="w-100" alt="Poster Glenmore 2">
+            <img loading="lazy" src="img/Glenmore2.png" class="w-100" alt="Poster Glenmore 2">
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
   <div class="hidden d-none">
     
   <iframe class="yt-if" src="https://www.youtube.com/embed/a3ICNMQW7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Indonesia_Banyuwangi_Regency_location_map.svg/1250px-Indonesia_Banyuwangi_Regency_location_map.svg.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Indonesia_Banyuwangi_Regency_location_map.svg/1250px-Indonesia_Banyuwangi_Regency_location_map.svg.png" class="w-100"></a>
+    <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Indonesia_Banyuwangi_Regency_location_map.svg/1250px-Indonesia_Banyuwangi_Regency_location_map.svg.png"><img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Indonesia_Banyuwangi_Regency_location_map.svg/1250px-Indonesia_Banyuwangi_Regency_location_map.svg.png" class="w-100"></a>
   </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
