--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </div>
     </div>
     <div class="container col-12 col-lg-5">
-      <div class="mcnt">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Indonesia_Banyuwangi_Regency_location_map.svg/1250px-Indonesia_Banyuwangi_Regency_location_map.svg.png" class="w-100">
+      <div class="mcnt mb-3">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/16/Indonesia_Banyuwangi_Regency_location_map.svg" class="w-100">
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 36%; left: 60%;" data-bs-toggle="modal" data-bs-target="#location1Modal">Giri</a>
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 80%; left: 64%;" data-bs-toggle="modal" data-bs-target="#location2Modal">Tegaldlimo</a>
     <a class="map-pin btn btn-sm btn-danger" href="#" style="top: 48%; left: 53%;" data-bs-toggle="modal" data-bs-target="#location3Modal">Rogojampi</a>
@@ -73,16 +73,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-          <iframe class="yt-if" src="https://www.youtube.com/embed/a3ICNMQW7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        Information about Location 1 goes here.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <iframe class="yt-if" src="https://www.youtube.com/embed/yR8VzCxW264" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 </div>
-
 <div class="modal fade" id="location2Modal" tabindex="-1" aria-labelledby="location2ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content modp5">
@@ -99,9 +94,6 @@
             <img loading="lazy" src="img/Tegaldlimo2.png" class="w-100" alt="Poster Tegaldlimo 2">
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -126,9 +118,6 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
     </div>
   </div>
 </div>
@@ -141,13 +130,13 @@
       </div>
       <div class="modal-body text-dark">
         <div class="row gy-3">
-          <div class="col-12">
+          <div class="col-12 col-lg-6">
             <img loading="lazy" src="img/glagah1.jpg" class="w-100" alt="Poster Glagah 1">
           </div>
+          <div class="col-12 col-lg-6">
+            <img loading="lazy" src="img/glagah2.png" class="w-100" alt="Poster Glagah 2">
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -165,9 +154,6 @@
             <img loading="lazy" src="img/muncar1.jpg" class="w-100" alt="Poster Muncar 1">
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -189,40 +175,35 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
     </div>
   </div>
 </div>
 <div class="modal fade" id="location7Modal" tabindex="-1" aria-labelledby="location7ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Genteng</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <div class="row gy-3">
+          <div class="col-12">
+            <img loading="lazy" src="img/genteng1.png" class="w-100" alt="Poster Genteng 1">
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 <div class="modal fade" id="location8Modal" tabindex="-1" aria-labelledby="location8ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
+    <div class="modal-content modp5">
       <div class="modal-header">
         <h5 class="modal-title text-dark" id="location2ModalLabel">Srono</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-dark">
-        Information about Location 2 goes here.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <iframe class="yt-if" src="https://www.youtube.com/embed/b7bjrCLqGXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
